--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ header{
     border-radius: 10px;
     box-shadow: 1px 36px 30px -9px rgba(245,56,85,0.68), 1px -6px 50px -4px rgba(245,56,85,0.35);
 }
-}
+
 
 .header-information figure img{
     max-width: 611px;
@@ -131,7 +131,6 @@ header{
 }
 
 .header-table{
-    border: 1px solid black;
     height: 200px;
     margin-top: 104px;
     display: flex;
@@ -176,13 +175,58 @@ header{
 }
 
 
+.hero{
+    margin-top: 107px;
+    flex-wrap: wrap;
+}
 
+.hero .container{
+    display: flex;
+}
 
+.hero .container figure{
+    width: 50%;
+}
 
+.hero .container figure img{
+    max-width: 508px;
+    max-height: 414px;
+    width: 100vw;
+    height: 100vh;
+}
 
+.hero-div{
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 45px;
+}
 
+.hero-div h2{
+    font-weight: 500;
+    font-size: 3.5rem;
+    line-height: 5rem;
+    color: #0b132a;
+    width: 25vw;
+}
 
+.hero-div p{
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 3rem;
+    color: #4f5665;
+    width: 26vw;
+    margin: 20px 0;
+}
 
+.hero-div ul li{
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.hero-div ul li i{
+    color: green;
+}
 
 
 footer{
