--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,7 @@ header {
 .choosed-plan ul {
   width: 55%;
   margin: 0 auto;
+  height: 276px;
 }
 
 .choosed-plan ul li {
@@ -306,8 +307,13 @@ header {
     font-size: 2.5rem;
     line-height: 3rem;
     color: #0b132a;
-    margin-top: 130px;
+    margin-top: 50px;
     margin-bottom: 20px;
+}
+
+.choosed-plan h2 span{
+  font-weight: 400;
+  color: #4f5665;
 }
 
 .choosed-plan a{
@@ -325,7 +331,49 @@ header {
     border-radius: 50px;
 }
 
+.global .container{
+  text-align: center;
+}
 
+.global .container h2{
+    font-weight: 500;
+    font-size: 3.5rem;
+    line-height: 5rem;
+    color: #0b132a;
+    width: 22.5vw;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+.global .container p{
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 3rem;
+  color: #4f5665;
+  width: 30vw;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 155px;
+}
+
+.global .container img{
+  max-width: 1060px;
+  max-height: 537px;
+  width: 75%;
+  height: 80%;
+}
+
+.global-social{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 109px;
+}
+
+.global .container .global-social .social-media{
+  width: 220px;
+  height: 90px;
+}
 
 footer {
   margin-top: 1000px;
