--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ header {
 }
 
 .hero {
+  display: flex;
   margin-top: 107px;
   flex-wrap: wrap;
   padding-bottom: 150px;
@@ -181,6 +182,7 @@ header {
 
 .hero .container {
   display: flex;
+  flex-direction: column;
 }
 
 .hero .container figure {
@@ -190,8 +192,8 @@ header {
 .hero .container figure img {
   max-width: 508px;
   max-height: 414px;
-  width: 100vw;
-  height: 100vh;
+  width: 90vw;
+  height: 45vh;
 }
 
 .hero-div {
@@ -205,7 +207,7 @@ header {
   font-size: 3.5rem;
   line-height: 5rem;
   color: #0b132a;
-  width: 25vw;
+  width: 25vh;
 }
 
 .hero-div p {
@@ -557,75 +559,99 @@ footer .footer-over {
   color: #4f5665;
 }
 
-@media screen and (max-width:1024px){
-
+@media screen and (max-width: 1024px) {
 }
 
-@media screen and (max-width:768px){
-  header{
+@media screen and (max-width: 768px) {
+  header {
     height: auto;
   }
 
-  .header-menu{
+  .header-menu {
     flex-direction: column;
   }
 
-  .header-menu nav ul{
+  .header-menu nav ul {
     display: block;
     margin: 20px auto;
   }
 
-  .header-menu nav ul li{
+  .header-menu nav ul li {
     margin: 15px 0;
   }
 
-  .header-menu-buttons{
+  .header-menu-buttons {
     margin-top: 25px;
   }
 
-  .header-information{
+  .header-information {
     flex-direction: column;
     align-items: center;
   }
 
-  .header-information div{
+  .header-information div {
     height: auto;
+    width: 95%;
   }
 
-  .header-information div h1{
-      width: 80vw;
-      text-align: center;
+  .header-information div h1 {
+    width: 80vw;
+    text-align: center;
+    margin: 0 auto;
   }
 
-  .header-information div p{
+  .header-information div p {
     margin: 20px auto;
     margin-bottom: 50px;
     width: 80vw;
   }
 
-  .header-information img{
+  .header-information img {
+    margin: 0 auto;
     margin-top: 150px;
   }
 
-  .header-table{
+  .header-information div a {
+    margin: 0 auto;
+    width: 247px;
+    text-align: center;
+  }
+
+  .information-text__span {
+    width: 247px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .header-table {
     flex-direction: column;
     align-items: center;
     margin: 150px auto;
-    height: auto;
-    width: 50%;
+    height: 25%;
+    width: 75%;
   }
 
-  .table-data{
+  .table-data {
     margin: 20px auto;
     width: 193px;
   }
 
+  .hero-div h2{
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .hero .hero-div p{
+    width: 65vw;
+    text-align: left;
+    margin: 0 auto;
+    margin-bottom: 40px;
+  }
+
 }
 
-@media screen and (max-width:480px){
-  
+@media screen and (max-width: 480px) {
 }
 
-@media screen and (max-width:320px){
-  
+@media screen and (max-width: 320px) {
 }
